feat: update position after slideTo

--- a/index.html
+++ b/index.html
@@ -15,31 +15,22 @@
 						<select id="test-1" multiple></select>
 					</div>
 					<div class="swiper-slide">
-						<select id="test-2"></select>
+						<select id="test-2" multiple></select>
 					</div>
 					<div class="swiper-slide">
-						<select id="test-3"></select>
+						<select id="test-3" multiple></select>
 					</div>
 					<div class="swiper-slide">
-						<select id="test-4"></select>
+						<select id="test-4" multiple></select>
 					</div>
 					<div class="swiper-slide">
-						<select id="test-5"></select>
+						<select id="test-5" multiple></select>
 					</div>
 					<div class="swiper-slide">
-						<select id="test-6"></select>
+						<select id="test-6" multiple></select>
 					</div>
 					<div class="swiper-slide">
-						<select id="test-7"></select>
-					</div>
-					<div class="swiper-slide">
-						<select id="test-8"></select>
-					</div>
-					<div class="swiper-slide">
-						<select id="test-9"></select>
-					</div>
-					<div class="swiper-slide">
-						<select id="test-10"></select>
+						<select id="test-7" multiple></select>
 					</div>
 				</div>
 			</div>
